# ai-agents

./: .env.example  .gitignore  README.md  air_sdk.ipynb  pyproject.toml  star_catalog_project.ipynb  synthetic_drug_dev_portfolio.csv
examples/: 00_manage_projects.py  01_health_check.py  02a_keywords_unesco.py  02b_keywords_aas.py  02c_keywords_aaai.py  03a_ocr_arxiv.py  03b_ocr_local.py  04_enhance.py  04_enhance_extended.py  05a_idea_quantum.py  05b_idea_psychology.py  05c_idea_chemeng.py  05d_idea_oncology.py  06_literature_coral.py  07a_methods_quantum.py  07b_methods_zoology.py  07c_methods_psychology.py  07d_methods_chemeng.py  07e_methods_oncology.py  08a_one_shot_engineer.py  08b_one_shot_researcher.py  08c_one_shot_vlm.py  08d_one_shot_researcher_oss.py  09_deep_research_biostatistics.py  10_pipeline_oscillator.py  11_paper_oscillator.py  12_review.py
